# arxiv-downloader

./: .gitignore  AGENTS.md  README.md  arxiv-download  pyproject.toml  test_sanitize.py
arxiv_downloader/: cli.py  downloader.py  server.py  utils.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  ResultsTable.tsx  SearchBar.tsx  api.ts  types.ts
